--- a/1주차 과제/강한림/ID.html
+++ b/1주차 과제/강한림/ID.html
@@ -27,14 +27,14 @@
         <select>
             <option>한국어</option>
         </select>
-        <img id="naver" src="naver.jpg" width="300px">
+        <img id="naver" src="naver.png" width="300px">
         <div id="button">
-            <a href = "ID.html"><button>ID 로그인</button></a>
+            <button>ID 로그인</button>
             <a href="one.html"><button>일회용 번호</button></a>
-            <button>QR코드</button>
+            <a href="qr.html"><button>QR코드</button></a>
         </div>
-        <img id="qr" src="qr.jpg" width="150px"><br>
-        <p><strong>공용 네트워크, 공용 PC상태라면 안전을 위해<br>QR코드로 로그인해주세요.</strong></p>
+        <div class="login">아이디</div>
+        <div class="login">비밀번호</div>
         <input type="checkbox" name="check 1" value="로그인상태유지">로그인 상태 유지<br>
         <button>로그인</button>
         <h1>비밀번호 찾기 | 비밀번호 찾기 | 회원가입</h1>
