--- a/1주차 과제/강한림/one.html
+++ b/1주차 과제/강한림/one.html
@@ -24,7 +24,7 @@
         <select>
             <option>한국어</option>
         </select>
-        <img id="naver" src="naver.jpg" width="300px">
+        <img id="naver" src="naver.png" width="300px">
         <div id="button">
             <a href = "ID.html"><button>ID 로그인</button></a>
             <button>일회용 번호</button>
