--- a/2주차 과제/박지민/YoutubeMain.html
+++ b/2주차 과제/박지민/YoutubeMain.html
@@ -24,7 +24,7 @@
 		</header>
 		
 		<section class = 'player'>
-			<video controls src="파일명넣기"></video>
+			<video controls src="video1.mp4"></video>
 		</section>
 		
 		<div class='infoAndUpNext'>
