--- a/2주차 과제/강한림/index.html
+++ b/2주차 과제/강한림/index.html
@@ -40,7 +40,7 @@
                 <li>#is</li>
                 <li>#cuuute</li>
             </ul>
-            <div class="titleandbutton">
+            <div class="titleAndButton">
                 <span class="title clamp">
                     귀여운 하얀 고양이가 잠을 자고 있는 영상 | Web_fe 2주차 과제
                 </span>
@@ -64,14 +64,14 @@
                 <img src="image/caaat.jpg" alt="" width="50px">
                 <div class="info">
                     <span class="name">Kang hanlim</span>
-                    <span class="subscrives">10K subscrive</span></div>
+                    <span class="subscribers">10K subscribers</span></div>
             </div>
-            <button class="subscrive"> subscrive</button>
+            <button class="subscribe"> subscribe</button>
         </div>
     </section>
 
     <!--up Next-->
-    <section class="UpNext">
+    <section class="upNext">
         <span class="title">Up next</span>
         <ul>
             <li class="item">
