--- a/2주차 과제/박지민/YoutubeMain.html
+++ b/2주차 과제/박지민/YoutubeMain.html
@@ -7,7 +7,7 @@
 		<script src="https://kit.fontawesome.com/f4a5dd5ce5.js" crossorigin="anonymous"></script>
 		<link rel = 'stylesheet' href = 'style.css'/>
 		<title>TabYoutube</title>	
-		<script src = 'mai.js' defer></script>
+		<script src = 'main.js' defer></script>
 	</head>
 	
 	<body> 
